// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @format
 * @flow
 */

export const a = 42;

=====================================output=====================================
/**
 * @format
 * @flow
 */

export const a = 42;

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @format
 * @flow
 */

export const b = 42;

=====================================output=====================================
/**
 * @format
 * @flow
 */

export const b = 42;

================================================================================
`;

exports[`test1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @format
 * @flow
 */

import {a} from './a';
import {b} from './b';

([a, b]: [empty, empty]);
([b, a]: [empty, empty]);

=====================================output=====================================
/**
 * @format
 * @flow
 */

import { a } from "./a";
import { b } from "./b";

([a, b]: [empty, empty]);
([b, a]: [empty, empty]);

================================================================================
`;

exports[`test2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @format
 * @flow
 */

import {b} from './b';
import {a} from './a';

([a, b]: [empty, empty]);
([b, a]: [empty, empty]);

=====================================output=====================================
/**
 * @format
 * @flow
 */

import { b } from "./b";
import { a } from "./a";

([a, b]: [empty, empty]);
([b, a]: [empty, empty]);

================================================================================
`;
